--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <div class="container">
 
     <section class="card bronze">
-      <p class="card-price">
+      <h2 class="card-price">
         &#36;2
         </h2>
       <div class="card-image">
